[package]
edition = "2024"
name = "midi"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "midi"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp32s3",
] }

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }

embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }

critical-section = "1.2.0"
static_cell = "2.1.1"
embassy-sync = "0.7.2"
heapless = "0.9.2"

# Display
embedded-graphics = "0.8.1"
ssd1306 = "0.10.0"
display-interface = { version = "0.5.0", features = ["defmt-03"] }
# Midi
usbd-midi = "0.5.0"
usb-device = { version = "0.3.2", features = ["defmt"] }
midi-convert = "0.2.0"
embassy-futures = { version = "0.1.2", features = ["defmt"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
